--- a/scss/app.scss
+++ b/scss/app.scss
@@ -39,6 +39,7 @@
 @import 'components/menumobile_custom';
 @import 'components/fix1';
 @import 'components/fix2';
+@import 'components/fix3';
 
 @import 'pages/home';
 @import 'pages/about';
