--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -230,7 +230,7 @@
         line-height: 0.81;
         //border-bottom: 1px solid currentColor;
         padding-bottom: 5px;
-        text-transform: uppercase;
+        //text-transform: uppercase;
         font-family: $font-primary-Bold;
         //text-shadow: 0px 1px 4px rgba(0,0,0,0.3);
         a{
