fix mobile sukien

--- a/scss/components/_fix2.scss
+++ b/scss/components/_fix2.scss
@@ -8,6 +8,11 @@
       }
     }
     &__body{
+      @include media-breakpoint-down('s'){
+        >*{
+          height: 236px;
+        }
+      }
       &__item{
         &:nth-child(n+2){
           margin-top: 5px;
